Morking mobile menu

--- a/client/src/template.html
+++ b/client/src/template.html
@@ -23,7 +23,7 @@
          <img src=<%=require("./../images/close.png")%>
         alt="close menu" id="close-menu-icon">
       </div>
-      <nav>
+      <nav class="hide-menu">
         <ul>
           <li><a href="#">Menu</a></li>
           <li><a href="#">Offers</a></li>
