--- a/client/src/template.html
+++ b/client/src/template.html
@@ -34,21 +34,7 @@
       </nav>
     </header>
 
-    <main>
-      <section>
-        <h3>KIDS MENU</h3>
-        <div class="content">
-          <div class="item">
-            <img src=<%=require("./../images/junior_cheeseburger.png")%> alt="">
-            <p>Junio hamburger</p>
-          </div>
-          <div class="item">
-            <img src=<%=require("./../images/junior_cheeseburger.png")%> alt="">
-            <p>Junio hamburger</p>
-          </div>
-        </div>
-      </section>
-    </main>
+    <main></main>
 
     <footer>
       <div class="footer-info">
