--- a/client/src/template.html
+++ b/client/src/template.html
@@ -19,9 +19,10 @@
       </div>
 
       <div class="mobile-menu">
-        <img src=<%=require("./../images/menu-icon.svg")%> alt="open menu" id="open-menu-icon">
-         <img src=<%=require("./../images/close.png")%>
-        alt="close menu" id="close-menu-icon">
+        <img src=<%=require("./../images/menu-icon.svg")%> alt="open
+        menu" id="open-menu-icon"> <img
+        src=<%=require("./../images/close.png")%> alt="close menu"
+        id="close-menu-icon">
       </div>
       <nav class="hide-menu">
         <ul>
@@ -33,6 +34,39 @@
         </ul>
       </nav>
     </header>
+
+    <div class="backdrop">
+      <div class="popup">
+        <div class="popup-img">
+          <img src="" alt="home" />
+        </div>
+        <div class="meal">
+          <h3>Chilli Cheese Bites</h3>
+          <div class="prices">
+            <div class="price">
+              <span class="amount">Sandwich Only</span>
+              <span class="value">Ksh. 300</span>
+            </div>
+            <div class="price">
+              <span class="amount">Combo Meal</span>
+              <span class="value">Ksh. 300</span>
+            </div>
+          </div>
+
+          <div class="description">
+            <p>
+              Double Cheeseburger has two signature flame-grilled beef
+              patties topped with melted American cheese, bacon,
+              crinkle cut pickles, yellow mustard, and ketchup on a
+              toasted sesame seed bun.
+            </p>
+            <p class="combo">
+              * Combo meal comes with large fries and a soda
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <main></main>
 
