close popup design

--- a/client/src/template.html
+++ b/client/src/template.html
@@ -37,6 +37,10 @@
 
     <div class="backdrop">
       <div class="popup">
+        <div class="back">
+          <img src=<%=require("./../images/back.png")%> id="back-arrow" alt="Go back">
+          <img src=<%=require("./../images/close.png")%> id="back-cross" alt="Go back">
+        </div>
         <div class="popup-img">
           <img src="" alt="home" />
         </div>
