Loading state update

--- a/client/src/template.html
+++ b/client/src/template.html
@@ -39,7 +39,11 @@
       
     </div>
 
-    <main></main>
+    <main>
+      <div class="spinner">
+        <img src=<%=require("./../images/spinner.gif")%> alt="Spinner">
+      </div>
+    </main>
 
     <footer>
       <div class="footer-info">
